--- a/lab3/mine/src/templates/index.html
+++ b/lab3/mine/src/templates/index.html
@@ -56,7 +56,7 @@
           <div class="col-sm-5 col-lg-6">
             <div class="clearfix">
               <h1 class="pt-3" >教师教学科研登记系统</h1>
-              <span class="badge badge-danger">Version 1.0</span>
+              <!-- <span class="badge badge-danger">Version 1.0</span> -->
               <p class="text-muted"></p>
             </div>
           </div>
